--- a/style.css
+++ b/style.css
@@ -138,7 +138,12 @@ p {
     font-size: 1.6rem;
     max-width: 800px;
     text-align: center;
+    padding-bottom: 50px;
+}
 
+.scarica-button button {
+    background-color: #7187d7;
+    color: white;
 }
 
 footer {
@@ -192,10 +197,6 @@ h4 {
     text-decoration: none;
     color: white;
 }
-
-
-
-
 
 
 
